--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ TWILIO_FROM_NUMBER=your_twilio_phone_number
 # Telegram Configuration
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here,additional_chat_ids_separated_by_commas
+TELEGRAM_ADMIN_ID=admin_chat_id_here_with_unlimited_invites
+INVITE_LIMIT=5 # Regular users can create at most 5 invites, admins can create unlimited invites
+TELEGRAM_ALLOWED_ALL_USERS=false # If true, all users will have access to the bot, otherwise only the users in the TELEGRAM_CHAT_ID, TELEGRAM_ADMIN_ID and invite codes will be allowed
 
 # Agent Configuration (obsolete, now set from user settings)
 MAX_AGENT_TOOLS_ITERATIONS=65
