--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -16,3 +16,6 @@ python-telegram-bot[job-queue]>=20.0
 faiss-cpu>=1.7.4
 numpy>=1.24.0
 docker>=6.1.3
+docx2txt>=0.8
+pandas>=2.0.0
+openpyxl>=3.1.2
