--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 # API Keys
 ANTHROPIC_API_KEY=your_anthropic_api_key_here
 OPENAI_API_KEY=your_openai_api_key_here
+GOOGLE_API_KEY=your_google_api_key_here
 
 # Search API Keys
 TAVILY_API_KEY=your_tavily_api_key_here
