--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - PYTHONUNBUFFERED=1
+      - WORKSPACE_ROOT=/opt/generall.ai/Generall.AI
     restart: always
     privileged: true
     network_mode: host
